--- a/_config.yml
+++ b/_config.yml
@@ -101,4 +101,4 @@ deploy:
   type: git
   repo: https://github.com/8128/8128.github.io
   # example, https://github.com/hexojs/hexojs.github.io
-  branch: gh-pages
+  branch: master
