--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ keywords: code,life,blog
 author: 8128
 language: zh-CN
 timezone: America/Los_Angeles
+email: tty8128@outlook.com
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
