--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -18,16 +18,16 @@ class:
 #       avatar: https://xxxxx/avatar.png
 #       descr: xxxxxxx  
 
-#  class2:
-#    class_name: 鏈接無效
-#    link_list:
-#      1:
-#        name: 夢xxx
-#        link: https://blog.xxx.com
-#        avatar: https://xxxx/avatar.png
-#        descr: xxxx
-#      2:
-#        name: xx
-#        link: https://www.axxxx.cn/
-#        avatar: https://x
-#        descr: xx
+class2:
+  class_name: 关于我
+  link_list:
+    1:
+      name: 8128
+      link: https://8128.github.io
+      avatar: https://raw.githubusercontent.com/8128/PicGo/master/20200329023708.png
+      descr: My Github
+    2:
+      name: RuntimeException2048
+      link: https://weibo.com/u/7107790901
+      avatar: https://raw.githubusercontent.com/8128/PicGo/master/20200329023635.png
+      descr: Weibo
