--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 8128's Blog
 subtitle: Code & Life
-description: 8128's blog powered by Butterfly
+description: Code & Life
 keywords: code,life,blog
 author: 8128
 language: zh-CN
