--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hexo-server": "^1.0.0",
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-wordcount": "^6.0.1",
+    "kind-of": "^6.0.3",
     "minimist": "^1.2.5",
     "or": "^0.2.0",
     "social-share.js": "^1.0.16",
